2004-06-11  David Reveman  <c99drn@cs.umu.se>

	* configure.in: Require glitz 0.1.4.

	* src/cairo_gl_surface.c: Added CAIRO_GL_SURFACE_MULTISAMPLE macro.
	(_cairo_gl_extract_rectangle): Added _cairo_gl_extract_rectangle.
	(_cairo_gl_surface_composite_trapezoids): Use fill_rectangles if
	we can represent the traps as a rectangle. fill_trapezoids cannot be
	used with software multi-sampling.
	(CAIRO_GL_COMPOSITE_TRAPEZOIDS_SUPPORT): Glitz can no longer composite
	trapezoids just by using offscreen drawing.
	(_cairo_gl_surface_create_similar): Inherit anti-aliasing properties.

	* src/cairo_gstate.c (_cairo_gstate_create_pattern): Get solid color
	from color stop components.

	* src/cairoint.h: Removed cairo color from color stop.

	* src/cairo_pattern.c: Added MULTIPLY_COLORCOMP macro.
	(cairo_pattern_add_color_stop): Do not pre-multiply stop color.
	(_cairo_pattern_calc_color_at_pixel): Multiply with alpha.

2004-05-28  Keith Packard  <keithp@keithp.com>

	* configure.in:
	* src/Makefile.am:
	Add WARN_CFLAGS, autodetection for 64/128 bit ints and
	cairo_wideint.[ch]
	
	* src/cairo_gstate.c: (_cairo_gstate_show_glyphs):
	Check status return from _cairo_gstate_glyph_extents
	
	* src/cairo_pattern.c: (_cairo_image_data_set_radial),
	(_cairo_pattern_get_image):
	* src/cairo_png_surface.c: (_cairo_png_surface_copy_page):
	* src/cairo_surface.c: (_cairo_surface_composite):
	Quiet compiler warnings about uninitialized variables

	* src/cairo_traps.c: (_det16_32), (_det32_64),
	(_fixed_16_16_to_fixed_32_32), (_line_segs_intersect_ceil):
	Switch to alternate exact line intersection code.
	
	* src/cairo_wideint.c: (_cairo_uint64_divrem),
	(_cairo_uint32_to_uint64), (_cairo_int32_to_int64),
	(_cairo_uint32s_to_uint64), (_cairo_uint64_add),
	(_cairo_uint64_sub), (_cairo_uint32x32_64_mul),
	(_cairo_uint64_mul), (_cairo_uint64_lsl), (_cairo_uint64_rsl),
	(_cairo_uint64_rsa), (_cairo_uint64_lt), (_cairo_uint64_eq),
	(_cairo_int64_lt), (_cairo_uint64_not), (_cairo_uint64_negate),